--- a/WpfGithubDemo/WpfGithubDemo/MainWindow.xaml
+++ b/WpfGithubDemo/WpfGithubDemo/MainWindow.xaml
@@ -16,11 +16,11 @@
         <Button x:Name="buttonGomb" Content="Gomb" Width="200" Height="30" Grid.Row="1" />
         <DataGrid x:Name="datagridAdatok" />
         <Button x:Name="buttonGombAlso" Grid.Row="2" Content="Gomb2" Width="200" Height="30" />
-        <Button x:Name="buttonGombAlso2" Grid.Row="3" Content="Gomb3" Width="200" Height="30" />
-        
+        <ComboBox x:Name="comboList" Grid.Row="3" Width="200" Height="30"/>
 
-        
-                  
+
+
+
 
 
     </Grid>
